<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiZW56by1vIiwiYSI6ImNsNTl3c3N3aDEzcmwzZG5zc2J6eGlsMGIifQ.ukP47h-0lgGwCsWKs2aXsg</string>
    <string name="connection_succeed">Connexion suceeded</string>
    <string name="error_authentication_canceled">Connexion cancelled</string>
    <string name="bottom_nav_map">Map View</string>
    <string name="bottom_nav_list">List View</string>
    <string name="bottom_nav_workmates">Workmates</string>
    <string name="lunch">Your lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="toolbar_subtitle">I\'m hungry!</string>

    <string name="facebook_application_id" translatable="false">1584126201982183</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1584126201982183</string>
    <string name="facebook_client_token" translatable="false">bc05d178afb1182b9f4db13b0ac7b332</string>

    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="app_tagline">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="signin">Sign in</string>
    <string name="google_signin">Sign in With Google</string>
    <string name="facebook_signin">Sign in With Facebook</string>
    <string name="restaurant_background">Restaurant Background</string>
    <string name="checkmark_description">Choose this restaurant</string>
    <string name="like_button">Like</string>
    <string name="center_button">Center map on me</string>
    <string name="info_no_username_found">Unknown username</string>
    <string name="info_no_email_found">Unknown email</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="search_hint">Search restaurants</string>
    <string name="restaurant_choice_error">No restaurant selected</string>
    <string name="default_notification_channel_name">Lunch reminder</string>
    <string name="default_notification_channel_description">Set a reminder every day at noon with the restaurant you selected and every workmates who selected it</string>
    <string name="notification_content_title">Lunch reminder</string>
    <string name="notification_content_description">Lunch planned at %1$s, %2$s with %3$s</string>

    <string name="workmates_choice">%1$s is eating at %2$s</string>
    <string name="workmates_no_choice">%1$s hasn\'t decided yet</string>
    <string name="workmates_restaurant">%1$s is joining!</string>

    <string name="menu_search_hint">Search by restaurant name</string>
    <string name="menu_sort_name">Sort by name</string>
    <string name="menu_sort_rating">Sort by rating</string>
    <string name="menu_sort_distance">Sort by distance</string>

    <string name="settings_action_bar_title">Settings</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_delete_title">Delete your account</string>
    <string name="settings_delete_description">You will permanently lose access to your account</string>
    <string name="settings_delete_button">Delete account</string>
    <string name="setting_delete_popup_title">Are you sure?</string>
    <string name="setting_delete_popup">Are you sure? You will lose access to your account</string>
    <string name="settings_delete_confirm">Delete account</string>
    <string name="settings_notification_title">Activate notifications</string>

    <string name="preference_file_key" translatable="false">user preferences file</string>
    <string name="notifcations_choice_key" translatable="false">Notification choice</string>
</resources>