<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/MyToolBarTheme"
        android:background="@color/accent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:title="@string/settings_action_bar_title"
        app:titleTextColor="@color/white"/>

    <TextView
        android:id="@+id/settings_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/settings_activity_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/settings_delete_title"/>

    <TextView
        android:id="@+id/settings_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        android:paddingBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/settings_name"
        app:layout_constraintStart_toStartOf="@id/settings_name"
        android:text="@string/settings_delete_description"/>

    <Button
        android:id="@+id/settings_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_desc"
        app:layout_constraintStart_toStartOf="@id/settings_name"
        android:text="@string/settings_delete_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>