<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/restaurant_activity_coordinator_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_container"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:titleEnabled="false"
            app:collapsedTitleTextColor="@color/white"
            app:expandedTitleTextColor="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/restaurant_activity_picture"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/restaurant_background"
                    android:src="@drawable/restaurant_background"
                    android:adjustViewBounds="false"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/restaurant_activity_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:titleTextColor="@color/white"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/restaurant_activity_check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_anchor="@id/appbar_container"
        app:layout_anchorGravity="bottom|end"
        app:fabSize="normal"
        android:contentDescription="@string/checkmark_description"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:backgroundTint="@color/white"
        app:behavior_autoHide="false" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/restaurant_activity_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.RestaurantActivity">

            <androidx.cardview.widget.CardView
                android:id="@+id/restaurant_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#fc3f1b"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/restaurant_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Nom du restaurant"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:drawableRight="@drawable/ic_baseline_star_outline_24"
                        android:drawableTint="#f6e518"
                        android:drawablePadding="8dp"
                        />

                    <TextView
                        android:id="@+id/restaurant_adress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Adresse du restaurant"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/restaurant_like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/restaurant_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="16dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#fc3f1b"
                android:drawableTop="@drawable/ic_baseline_star_outline_24"
                android:drawablePadding="4dp"
                android:text="@string/like_button"/>

            <View
                android:id="@+id/restaurant_list_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/restaurant_like_button"
                android:background="#bbb"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/restaurant_recycler_view"
                android:layout_width="0dp"
                android:layout_margin="16dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/restaurant_list_separator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/activity_restaurant_item"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>